@startuml Model
package "Model System" {
  object ClusterBaseModel {
    + BaseModelSpec spec
    + ModelStatusSpec status
  }
  
  object BaseModel {
    + BaseModelSpec spec
    + ModelStatusSpec status
  }

  object BaseModelSpec {
    + ModelFormat modelFormat
    + ModelFrameworkSpec modelFramework
    + string modelArchitecture
    + ModelQuantization quantization
    + string modelParameterSize
    + string[] modelCapabilities
    + json modelConfiguration
    + json tensorRTLLMConfiguration
    + StorageSpec storage
    + ModelExtensionSpec modelExtension
    + string[] servingMode
    + int32 maxTokens
    + Time deprecationTime
    + bool isLongTermSupported
    + map<string, string> additionalMetadata
  }

  enum ServingMode {
    + On-demand
    + Dedicated
  }

  enum ModelQuantization {
    + fp8
    + fbgemm_fp8
    + int4
  }

  object ModelFormat {
    + string name
    + string version
  }

  object ModelFrameworkSpec {
    + string name
    + string version
  }

  enum ModelCapability {
    + TEXT_GENERATION
    + TEXT_SUMMARIZATION
    + TEXT_EMBEDDINGS
    + TEXT_RERANK
    + CHAT
    + VISION
    + UNKNOWN
  }

  enum LifeCycleState {
    + Creating
    + Importing
    + In_Transit
    + In_Training
    + Ready
    + Failed
  }

  enum ModelWeightStatus {
    + Deprecated
    + Experiment
    + Public
    + Internal
  }

  object StorageSpec {
    + string path
    + string schemaPath
    + map<string, string> parameters
    + string storageKey
    + string storageUri
    + map<string, string> nodeSelector
    + NodeAffinity nodeAffinity
  }

  object ModelExtensionSpec {
    + string displayName
    + string version
    + bool disabled
    + string vendor
    + string compartmentID
  }

  object ModelStatusSpec {
    + string lifecycle
    + LifeCycleState state
    + string[] nodesReady
    + string[] nodesFailed
  }

  object FineTunedWeight {
    + FineTunedWeightSpec spec
    + ModelStatusSpec status
  }

  object FineTunedWeightSpec {
    + ObjectReference baseModelRef
    + string modelType
    + json hyperParameters
    + StorageSpec storage
    + ModelExtensionSpec modelExtension
  }

  object ObjectReference {
    + string name
    + string namespace
  }

  ClusterBaseModel --|> BaseModelSpec
  BaseModel --|> BaseModelSpec
  BaseModelSpec --> ModelFormat
  BaseModelSpec --> ModelCapability
  BaseModelSpec --> ModelFrameworkSpec
  BaseModelSpec --> ServingMode
  BaseModelSpec --> ModelQuantization
  BaseModelSpec --> StorageSpec
  BaseModelSpec --> ModelExtensionSpec
  
  ClusterBaseModel --|> ModelStatusSpec
  BaseModel --|> ModelStatusSpec
  ModelStatusSpec --> LifeCycleState
  
  FineTunedWeight --|> FineTunedWeightSpec
  FineTunedWeight --|> ModelStatusSpec
  FineTunedWeightSpec --> ObjectReference
  FineTunedWeightSpec --> StorageSpec
  FineTunedWeightSpec --> ModelExtensionSpec
}
@enduml